--- a/python_graphs.yml
+++ b/python_graphs.yml
@@ -8,6 +8,7 @@ dependencies:
   - alsa-lib=1.2.3=h516909a_0
   - argcomplete=2.0.0=pyhd8ed1ab_0
   - asttokens=2.0.5=pyhd8ed1ab_0
+  - attrs=21.4.0=pyhd8ed1ab_0
   - awkward=1.7.0=py38h709712a_0
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
@@ -16,8 +17,8 @@ dependencies:
   - brotli=1.0.9=h7f98852_6
   - brotli-bin=1.0.9=h7f98852_6
   - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2021.10.8=ha878542_0
-  - certifi=2021.10.8=py38h578d9bd_1
+  - ca-certificates=2022.6.15=ha878542_0
+  - certifi=2022.6.15=py38h578d9bd_0
   - cffi=1.15.0=py38h3931269_0
   - click=8.0.4=py38h578d9bd_0
   - cycler=0.11.0=pyhd8ed1ab_0
@@ -42,13 +43,16 @@ dependencies:
   - gst-plugins-base=1.18.5=hf529b03_3
   - gstreamer=1.18.5=h9f60fe5_3
   - icu=69.1=h9c3ff4c_0
+  - iminuit=2.8.4=py38h51133e4_0
   - importlib-metadata=4.11.1=py38h578d9bd_0
   - importlib_metadata=4.11.1=hd8ed1ab_0
+  - importlib_resources=5.8.0=pyhd8ed1ab_0
   - ipykernel=6.9.1=py38he5a9106_0
   - ipython=8.0.1=py38h578d9bd_2
   - jbig=2.1=h7f98852_2003
   - jedi=0.18.1=py38h578d9bd_0
   - jpeg=9e=h7f98852_0
+  - jsonschema=4.6.0=pyhd8ed1ab_0
   - jupyter_client=7.1.2=pyhd8ed1ab_0
   - jupyter_core=4.9.2=py38h578d9bd_0
   - kiwisolver=1.3.2=py38h1fd1430_1
@@ -106,6 +110,7 @@ dependencies:
   - mypy_extensions=0.4.3=py38h578d9bd_4
   - mysql-common=8.0.28=ha770c72_0
   - mysql-libs=8.0.28=hfa10184_0
+  - nbformat=5.4.0=pyhd8ed1ab_0
   - ncurses=6.3=h9c3ff4c_0
   - nest-asyncio=1.5.4=pyhd8ed1ab_0
   - nspr=4.32=h9c3ff4c_1
@@ -137,8 +142,10 @@ dependencies:
   - pyqt5-sip=4.19.18=py38h709712a_8
   - pyqtchart=5.12=py38h7400c14_8
   - pyqtwebengine=5.12.1=py38h7400c14_8
+  - pyrsistent=0.18.1=py38h0a891b7_1
   - python=3.8.12=ha38a3c6_3_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.15.3=pyhd8ed1ab_0
   - python-xxhash=2.0.2=py38h497a2fe_1
   - python_abi=3.8=2_cp38
   - pytz=2021.3=pyhd8ed1ab_0
