--- a/python_graphs.yml
+++ b/python_graphs.yml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
+  - absl-py=1.2.0=pyhd8ed1ab_0
   - alsa-lib=1.2.3=h516909a_0
   - argcomplete=2.0.0=pyhd8ed1ab_0
   - asttokens=2.0.5=pyhd8ed1ab_0
@@ -14,6 +15,7 @@ dependencies:
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - black=22.1.0=pyhd8ed1ab_0
+  - blinker=1.4=py_1
   - brotli=1.0.9=h7f98852_6
   - brotli-bin=1.0.9=h7f98852_6
   - c-ares=1.18.1=h7f98852_0
@@ -21,6 +23,8 @@ dependencies:
   - certifi=2022.6.15=py38h578d9bd_0
   - cffi=1.15.0=py38h3931269_0
   - click=8.0.4=py38h578d9bd_0
+  - colorama=0.4.5=pyhd8ed1ab_0
+  - cryptography=35.0.0=py38h3e25421_2
   - cycler=0.11.0=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
   - dbus=1.13.6=h5008d03_3
@@ -38,8 +42,10 @@ dependencies:
   - fonts-conda-forge=1=0
   - fonttools=4.29.1=py38h497a2fe_0
   - freetype=2.10.4=h0708190_1
+  - future=0.18.2=py38h578d9bd_5
   - gettext=0.19.8.1=h73d1719_1008
   - giflib=5.2.1=h36c2ea0_2
+  - grpcio=1.43.0=py38hdd6454d_0
   - gst-plugins-base=1.18.5=hf529b03_3
   - gstreamer=1.18.5=h9f60fe5_3
   - icu=69.1=h9c3ff4c_0
@@ -47,6 +53,7 @@ dependencies:
   - importlib-metadata=4.11.1=py38h578d9bd_0
   - importlib_metadata=4.11.1=hd8ed1ab_0
   - importlib_resources=5.8.0=pyhd8ed1ab_0
+  - intel-openmp=2022.0.1=h06a4308_3633
   - ipykernel=6.9.1=py38he5a9106_0
   - ipython=8.0.1=py38h578d9bd_2
   - jbig=2.1=h7f98852_2003
@@ -60,11 +67,11 @@ dependencies:
   - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.36.1=hea4e1c9_2
   - lerc=3.0=h9c3ff4c_0
-  - libblas=3.9.0=13_linux64_openblas
+  - libblas=3.9.0=14_linux64_mkl
   - libbrotlicommon=1.0.9=h7f98852_6
   - libbrotlidec=1.0.9=h7f98852_6
   - libbrotlienc=1.0.9=h7f98852_6
-  - libcblas=3.9.0=13_linux64_openblas
+  - libcblas=3.9.0=14_linux64_mkl
   - libclang=13.0.1=default_hc23dcda_0
   - libcurl=7.81.0=h2574ce0_0
   - libdeflate=1.10=h7f98852_0
@@ -78,7 +85,7 @@ dependencies:
   - libglib=2.70.2=h174f98d_4
   - libgomp=11.2.0=h1d223b6_12
   - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=13_linux64_openblas
+  - liblapack=3.9.0=14_linux64_mkl
   - libllvm13=13.0.1=hf817b99_0
   - libnghttp2=1.46.0=h812cca2_0
   - libnsl=2.0.0=h7f98852_0
@@ -87,6 +94,7 @@ dependencies:
   - libopus=1.3.1=h7f98852_1
   - libpng=1.6.37=h21135ba_2
   - libpq=14.2=hd57d9b9_0
+  - libprotobuf=3.20.1=h6239696_0
   - libsodium=1.0.18=h36c2ea0_1
   - libssh2=1.10.0=ha56f1ee_2
   - libstdcxx-ng=11.2.0=he4da1e4_12
@@ -101,9 +109,12 @@ dependencies:
   - libzlib=1.2.11=h36c2ea0_1013
   - lz4=3.1.10=py38hebdc3cf_0
   - lz4-c=1.9.3=h9c3ff4c_1
+  - markdown=3.4.1=pyhd8ed1ab_0
+  - markupsafe=2.1.1=py38h0a891b7_1
   - matplotlib=3.5.1=py38h578d9bd_0
   - matplotlib-base=3.5.1=py38hf4fb855_0
   - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mkl=2022.0.1=h06a4308_117
   - mplhep=0.3.21=pyhd8ed1ab_0
   - mplhep_data=0.0.3=pyhd8ed1ab_0
   - munkres=1.1.4=pyh9f0ad1d_0
@@ -113,9 +124,11 @@ dependencies:
   - nbformat=5.4.0=pyhd8ed1ab_0
   - ncurses=6.3=h9c3ff4c_0
   - nest-asyncio=1.5.4=pyhd8ed1ab_0
+  - ninja=1.11.0=h924138e_0
   - nspr=4.32=h9c3ff4c_1
   - nss=3.74=hb5efdd6_0
   - numpy=1.22.2=py38h6ae9a64_0
+  - oauthlib=3.2.0=pyhd8ed1ab_0
   - openjpeg=2.4.0=hb52868f_1
   - openssl=1.1.1l=h7f98852_0
   - packaging=21.3=pyhd8ed1ab_0
@@ -130,11 +143,13 @@ dependencies:
   - platformdirs=2.5.1=pyhd8ed1ab_0
   - plotly=5.6.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.27=pyha770c72_0
+  - protobuf=3.20.1=py38hfa26641_0
   - pthread-stubs=0.4=h36c2ea0_1001
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pure_eval=0.2.2=pyhd8ed1ab_0
   - pycparser=2.21=pyhd8ed1ab_0
   - pygments=2.11.2=pyhd8ed1ab_0
+  - pyjwt=2.4.0=pyhd8ed1ab_0
   - pyntcloud=0.1.5=pyhd8ed1ab_0
   - pyparsing=3.0.7=pyhd8ed1ab_0
   - pyqt=5.12.3=py38h578d9bd_8
@@ -148,21 +163,26 @@ dependencies:
   - python-fastjsonschema=2.15.3=pyhd8ed1ab_0
   - python-xxhash=2.0.2=py38h497a2fe_1
   - python_abi=3.8=2_cp38
+  - pytorch=1.11.0=cpu_py38h39c826d_1
+  - pytorch-lightning=0.8.5=py_0
   - pytz=2021.3=pyhd8ed1ab_0
+  - pyyaml=6.0=py38h0a891b7_4
   - pyzmq=22.3.0=py38h2035c66_1
   - qt=5.12.9=ha98a1a1_5
   - readline=8.1=h46c0cb4_0
   - scipy=1.8.0=py38h56a6a73_1
   - scitokens-cpp=0.6.3=h00015f2_2
-  - setuptools=60.9.3=py38h578d9bd_0
   - six=1.16.0=pyh6c4a22f_0
+  - sleef=3.5.1=h9b69904_2
   - sqlite=3.37.0=h9cd32fc_0
   - stack_data=0.2.0=pyhd8ed1ab_0
   - tenacity=8.0.1=pyhd8ed1ab_0
+  - tensorboard=1.15.0=py38_0
   - tk=8.6.12=h27826a3_0
   - tomli=2.0.1=pyhd8ed1ab_0
   - tornado=6.1=py38h497a2fe_2
-  - traitlets=5.1.1=pyhd8ed1ab_0
+  - tqdm=4.64.0=pyhd8ed1ab_0
+  - trimesh=3.12.8=pyh6c4a22f_0
   - typed-ast=1.5.2=py38h497a2fe_0
   - typing_extensions=4.1.1=pyha770c72_0
   - uhi=0.3.1=pyhd8ed1ab_0
@@ -171,15 +191,63 @@ dependencies:
   - uproot-base=4.2.0=pyhdb1e927_0
   - uproot-methods=0.9.2=pyhd8ed1ab_0
   - wcwidth=0.2.5=pyh9f0ad1d_2
+  - werkzeug=2.2.1=pyhd8ed1ab_0
   - wheel=0.37.1=pyhd8ed1ab_0
   - xorg-libxau=1.0.9=h7f98852_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xrootd=5.4.0=py38h68ec80c_0
   - xxhash=0.8.0=h7f98852_3
   - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h7f98852_2
   - zeromq=4.3.4=h9c3ff4c_1
   - zipp=3.7.0=pyhd8ed1ab_1
   - zlib=1.2.11=h36c2ea0_1013
   - zstandard=0.17.0=py38h497a2fe_0
   - zstd=1.5.2=ha95c52a_0
+  - pip:
+    - addict==2.4.0
+    - anyio==3.6.1
+    - argon2-cffi==21.3.0
+    - argon2-cffi-bindings==21.2.0
+    - babel==2.10.3
+    - beautifulsoup4==4.11.1
+    - bleach==5.0.1
+    - charset-normalizer==2.1.0
+    - defusedxml==0.7.1
+    - deprecation==2.1.0
+    - idna==3.3
+    - ipywidgets==7.7.1
+    - jinja2==3.1.2
+    - json5==0.9.9
+    - jupyter-packaging==0.12.2
+    - jupyter-server==1.18.1
+    - jupyterlab==3.4.4
+    - jupyterlab-pygments==0.2.2
+    - jupyterlab-server==2.15.0
+    - jupyterlab-widgets==1.1.1
+    - mistune==0.8.4
+    - nbclassic==0.4.3
+    - nbclient==0.6.6
+    - nbconvert==6.5.0
+    - notebook==6.4.12
+    - notebook-shim==0.1.0
+    - open3d==0.15.2
+    - pandocfilters==1.5.0
+    - prometheus-client==0.14.1
+    - pyquaternion==0.9.9
+    - requests==2.28.1
+    - scikit-learn==1.1.1
+    - send2trash==1.8.0
+    - setuptools==63.3.0
+    - sniffio==1.2.0
+    - soupsieve==2.3.2.post1
+    - terminado==0.15.0
+    - threadpoolctl==3.1.0
+    - tinycss2==1.1.1
+    - tomlkit==0.11.1
+    - traitlets==5.3.0
+    - urllib3==1.26.11
+    - webencodings==0.5.1
+    - websocket-client==1.3.3
+    - widgetsnbextension==3.6.1
 prefix: /home/giammi56/anaconda3/envs/python_graphs
